--- a/main.ipynb
+++ b/main.ipynb
@@ -3,15 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Background\n",
+    "#### Background\n",
     "- A geology research company wants to create a tool for identifying interesting patterns in their imagery data. \n",
     "- This tool will possess a search capability whereby an analyst provides an image of interest and is presented with other images which are similar to it.\n",
     "\n",
-    "### Goal\n",
+    "#### Goal\n",
     "- Your task is to create the machine learning component for this image similarity application.\n",
     "- The machine learning model should return the top K images that are most similar to this image based on a single image input.\n",
     "\n",
-    "### Dataset\n",
+    "#### Dataset\n",
     "DATADownload link: http://aws-proserve-data-science.s3.amazonaws.com/geological_similarity.zip"
    ],
    "metadata": {
@@ -23,7 +23,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "#### Data Analysis"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
