--- a/similarity_search.ipynb
+++ b/similarity_search.ipynb
@@ -4,30 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geological Image Similarity Search\n",
-    "\n",
-    "### BACKGROUND\n",
-    "A geology research company wants to create a tool for identifying interesting patterns in their imagery data. This tool\n",
-    "will possess a search capability whereby an analyst provides an image of interest and is presented with other images\n",
-    "which are similar to it.\n",
-    "\n",
-    "### GOAL\n",
-    "Your task is to create the machine learning component for this image similarity application. The machine learning\n",
-    "model should return the top K images that are most similar to this image based on a single image input.\n",
-    "\n",
-    "### Data\n",
-    "Download link: http://aws-proserve-data-science.s3.amazonaws.com/geological_similarity.zip"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## CNN Model\n",
-    "\n",
-    "<br><br>\n",
-    "<img src=docs/cnn_concept.jpg width=60% align=left>"
+    "# Image Similarity Searching and Ranking"
    ]
   },
   {
@@ -514,6 +491,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
